--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="button green"></div>
     </header>
     <div id="terminal">
-      <p><span class="green">\[._.]/</span> - you're in codebytere's cli! type `help` to get started.</p>
+      <p><span class="green">\[._.]/</span> - you're in anirudha's commandline interface! type `help` to get started.</p>
         <p class="hidden">
           <span class="prompt">
             <span class="root">root</span>
@@ -30,9 +30,9 @@
   </div>
   
   <div class="footer">
-    <p>© Shelley Vohr 2024</p>
-    <p> Made with ❤ and coffee</p>
-    <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/codebytere/codebytere.github.io">here</a></p>
+    <p>© Anirudha Pradumna Tiwari 2024</p>
+    <p> Made with ❤ and learning</p>
+    <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/anirudhaptiwari/anirudhaptiwari.github.io">here</a></p>
   </div>
   
   </body>
