--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,9 @@
-<p>
-  I'm a primarily backend software engineer based in Pune, CA!<br> <br> Passionate about clean code, running, exploring, morning crosswords, and learning any and everything that happens to come my way. <br> <br> I work as a core engineer on the Electron javascript framework team at Microsoft 😀
-</p>
+<p>As it is said, "Learning never exhausts the mind."</p>
+
+    <p>I had followed the same. I am a Diploma level student in Bachelor of Science in Data Science and Application in Indian Institute of Technology Madras (IITM). Also, I am a student of Bachelor of Technology in Computer Science Engineering in Cyber Security (CSE CS) at G.H.Raisoni College of Engineering and Management, Pune.</p>
+
+    <p>I am very enthusiastic to learn about new technologies and trends and challenge myself to be beneficial to the community.</p>
+
+    <p>I am proficient in C (Programming Language), Python (Programming Language), Java (Programming Language), SQL. I have a beginner level understanding of Cloud Computing and to learn more about Big Data Computing I had completed NPTEL course of Big Data Computing by Prof. Rajiv Mishra From IIT Patna.</p>
+
+    <p>I can assure you that with my good Communication and Analytical Skills combined with my Team-working abilities. I will be an asset which you would not want to leave.</p>
