--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+<head><title>Anirudha's Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
