--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -1,9 +1,10 @@
 <ul>
-  <li>Javascript</li>
+  <li>Python</li>
   <li>C++</li>
-  <li>Objective-C</li>
+  <li>Google Cloud</li>
   <li>Python</li>
   <li>HTML5/CSS3</li>
   <li>Bash</li>
   <li>Git</li>
+  <li>Database Management Systems</li>
 </ul>
