--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -2,9 +2,8 @@
   <li>Python</li>
   <li>C++</li>
   <li>Google Cloud</li>
-  <li>Python</li>
   <li>HTML5/CSS3</li>
   <li>Bash</li>
   <li>Git</li>
-  <li>Database Management Systems</li>
+  <li>Database Management Systems (MYSQL,PostgreSQL) </li>
 </ul>
