--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="button green"></div>
     </header>
     <div id="terminal">
-      <p><span class="green">\[._.]/</span> - you're in anirudha's commandline interface! type `help` to get started.</p>
+      <p><span class="green">\[._.]/</span> - you're in Anirudha's commandline interface! type `help` to get started.</p>
         <p class="hidden">
           <span class="prompt">
             <span class="root">root</span>
